timetable in progress

--- a/src/app/modules/ClassSubject/classsubjectboard/classsubjectboard.component.html
+++ b/src/app/modules/ClassSubject/classsubjectboard/classsubjectboard.component.html
@@ -20,7 +20,7 @@
                 </mat-tab>
                 <mat-tab>
                     <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Subject Teacher
+                        <mat-icon>info</mat-icon>Class Subject Teacher
                     </ng-template>
                     <app-classsubjectdashboard></app-classsubjectdashboard>
                 </mat-tab>
