--- a/src/app/modules/schooltimetable/schooltimetable/schooltimetable.component.scss
+++ b/src/app/modules/schooltimetable/schooltimetable/schooltimetable.component.scss
@@ -1,3 +1,6 @@
 .mat-form-field,button{
     margin-right: 15px;
 }
+.mat-column-Active,.mat-column-recess,.mat-column-break{
+    justify-content: center;
+}
