--- a/src/app/modules/ClassSubject/classsubjectmapping/classsubjectdashboard.component.html
+++ b/src/app/modules/ClassSubject/classsubjectmapping/classsubjectdashboard.component.html
@@ -1,6 +1,6 @@
 <div>
     <div style="padding:15px 15px 0px 15px;">
-        <div><strong>Class Subject</strong></div>
+        <div style="padding: 15px;"><strong>Class Subject Teacher</strong></div>
 
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <alert></alert>
