--- a/src/app/modules/schooltimetable/schooltimetable/schooltimetable.component.html
+++ b/src/app/modules/schooltimetable/schooltimetable/schooltimetable.component.html
@@ -34,23 +34,18 @@
             <mat-table #table [dataSource]="dataSource">
 
                 <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                    <mat-header-cell *matHeaderCellDef>{{disCol=='Action'?'':disCol}}
+                    <mat-header-cell style="justify-content: center;" *matHeaderCellDef>
+                        {{disCol=='Action'?'':disCol.includes('f_')?(disCol|slice:2):disCol}}
                         <div *ngIf="SchoolTimeTableList.length>0" fxLayoutAlign="center center">
                             <button *ngIf="disCol=='Action'" [disabled]="loading || PagePermission=='read'"
-                                matTooltip="save all" mat-mini-fab (click)="UpdateAll()">
+                                matTooltip="save all" mat-mini-fab (click)="SaveAll()">
                                 <mat-icon>save</mat-icon>
                             </button>
                         </div>
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element ">
-                        <span *ngIf="disCol =='Active'">
-                            <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                                [checked]="element.Active==1?true:false">
-                            </mat-checkbox>
-                        </span>
-                        <span *ngIf="disCol !='Day' && disCol !='recess' && disCol !='break' 
-                        && disCol !='Active' && disCol !='Action'">
-                            <mat-form-field [style.width.px]="100">
+                    <mat-cell *matCellDef="let element" [ngStyle]="{'justify-content': disCol == 'Day'?'left' : 'center' }">
+                         <span *ngIf="disCol !='Day' && !disCol.includes('f_') && disCol !='Action'">
+                            <mat-form-field [style.width.px]="80">
                                 <mat-select (selectionChange)="onBlur(element,$event,disCol)" [(ngModel)]="element[disCol]"
                                     [value]="element[disCol]">
                                     <mat-option *ngFor="let item of ClassWiseSubjects" [value]="item.ClassSubjectId">
@@ -59,17 +54,16 @@
                                 </mat-select>
                             </mat-form-field>
                         </span>
-                        <button *ngIf="disCol=='Action'" [disabled]="loading || PagePermission=='read'"
+                        <button *ngIf="disCol=='Action'" [disabled]="loading || !element['Action'] || PagePermission=='read'"
                             matTooltip="save" mat-mini-fab (click)="SaveRow(element)">
                             <mat-icon>save</mat-icon>
                         </button>
-                        {{ disCol =='recess' || disCol =='break'?disCol:disCol =='Day'?element[disCol]:''}}
+                        {{ disCol.includes('f_')?(disCol|slice:2):disCol =='Day'?element[disCol]:''}}
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
             </mat-table>
         </div>
-
     </div>
 </div>
