--- a/src/app/modules/control/add-master-data/add-master-data.component.scss
+++ b/src/app/modules/control/add-master-data/add-master-data.component.scss
@@ -52,14 +52,14 @@ mat-form-field {
     margin-right: 5px;
 }
 .mat-column-Description {
-    flex: 1 0 35%;
+    flex: 1 0 25%;
 }
 .mat-column-Logic {
     flex: 1 0 20%;
 }
 .mat-column-Sequence,
 .mat-column-Active {
-    flex: 1 0 2%;
+    flex: 1 0 50;
 }
 .mat-column-MasterDataName {
     flex: 1 0 10%;
