--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -1,5 +1,5 @@
 <mat-card [ngClass]="{'width100':deviceXs,'width80':!deviceXs}">
-    <mat-card-title style="margin-left: 20px;margin-top: 20px;"></mat-card-title>
+    <mat-card-title style="margin-left: 20px;margin-top: 20px;">Sign up</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <alert></alert>
@@ -25,7 +25,7 @@
                         <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
                         <span class="text-danger" *ngIf="f.OrganizationName.touched && f.OrganizationName.hasError('required')">
                             Organisation name is required.</span>
-                    </mat-form-field>                    
+                    </mat-form-field>     
                     <mat-form-field appearance="outline">
                         <mat-label>Email</mat-label>
                         <input formControlName="Email" type="email" autocomplete="Off" matInput [maxlength]="50">
