--- a/src/app/modules/control/settingboard/settingboard.component.html
+++ b/src/app/modules/control/settingboard/settingboard.component.html
@@ -47,6 +47,12 @@
             </ng-template>
             <app-variable-config></app-variable-config>
         </mat-tab>
-        
+        <mat-tab>
+            <ng-template mat-tab-label>
+                <mat-icon>change_history
+                </mat-icon> Application prices
+            </ng-template>
+            <app-applicationprice></app-applicationprice>
+        </mat-tab>        
     </mat-tab-group>
 </div>
