--- a/src/app/modules/control/customerinvoice/customerinvoice.component.html
+++ b/src/app/modules/control/customerinvoice/customerinvoice.component.html
@@ -10,14 +10,14 @@
                 <div fxLayout="row" fxLayoutGap="15px" fxLayoutAlign="space-around center">
                     <mat-form-field appearance="outline">
                         <mat-label>Application</mat-label>
-                        <mat-select formControlName="searchApplicationId">
-                            <mat-option *ngFor="let item of Applications" [value]="item.MasterDataId">
-                                {{item.Description}}
+                        <mat-select formControlName="searchCustomerId">
+                            <mat-option *ngFor="let item of Organizations" [value]="item.OrganizationId">
+                                {{item.OrganizationName}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
                     <button [disabled]="loading" matTooltip="search" class="mat-raised-button"
-                        (click)="GetApplicationPrice()">
+                        (click)="GetCustomerInvoice()">
                         <mat-icon>search</mat-icon>
                     </button>
                 </div>
