customer app,invoice complete

--- a/src/app/modules/ReportConfig/reportconfigboard/reportconfigboard.component.html
+++ b/src/app/modules/ReportConfig/reportconfigboard/reportconfigboard.component.html
@@ -19,12 +19,12 @@
                     <app-orgreportcolumns></app-orgreportcolumns>
                 </mat-tab>
 
-                <mat-tab>
+                <!-- <mat-tab>
                     <ng-template mat-tab-label>
                         <mat-icon>info</mat-icon>Report Config Data
                     </ng-template>
                     <app-reportconfigdata></app-reportconfigdata>
-                </mat-tab>
+                </mat-tab> -->
                 
                 <!--<mat-tab>
                     <ng-template mat-tab-label>
