--- a/src/app/modules/LeaveManagement/LeaveBalance/leavebalance.component.html
+++ b/src/app/modules/LeaveManagement/LeaveBalance/leavebalance.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div style="padding:15px 15px 0px 15px;">
+    <div style="padding:15px 15px 10px 15px;">
         <div><strong>Leaves</strong></div>
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
@@ -17,7 +17,7 @@
                     </mat-autocomplete>
                 </mat-form-field>
                 <mat-form-field appearance="outline">
-                    <mat-select>
+                    <mat-select formControlName="YearMonth">
                         <mat-option *ngFor="let month of DropDownMonths" [value]="month['val']">{{month['MonthName']}}</mat-option>
                     </mat-select>
                 </mat-form-field>
